--- a/src/sass/layouts/_services.scss
+++ b/src/sass/layouts/_services.scss
@@ -85,6 +85,7 @@
 }
 
 .financing-section {
+
     & > div {
         grid-template-columns: repeat(4, 1fr);
         grid-template-rows: repeat(4, auto);
@@ -92,10 +93,6 @@
         @media only screen and (max-width: 1100px) {
             grid-template-columns: 1fr 1fr;
             row-gap: 20px;
-        }
-
-        @media only screen and (max-width: 550px) {
-            grid-template-columns: 1fr;
         }
 
         & > div {
@@ -137,6 +134,24 @@
             }
         }
 
+    }
+    @media only screen and (max-width: 550px) {
+        & > h1 {
+            padding-inline: 5%;
+        }
+        & > div {
+            grid-template-columns: repeat(4, 1fr);
+            overflow-x: scroll;
+
+            padding-inline: 5%;
+
+            & > div {
+                width: 85vw;
+                flex-shrink: 0;
+            }
+        }
+
+        grid-column: full-width !important; 
     }
 }
 
